--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
 		</dependency>
 		<!--TODO change to real database-->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>2.1.212</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.0</version>
 		</dependency>
 	</dependencies>
 
