Added basic models, services, controllers and repositories, they contain no logic for now; Added liquidbase to maintain database changes;

--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--TODO change to real database-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.11.0</version>
 		</dependency>
 	</dependencies>
 
