--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,3 +5,6 @@ spring.datasource.username=local
 spring.datasource.password=local
 spring.datasource.url=jdbc:postgresql://localhost:5434/test
 spring.jpa.open-in-view=false
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog.xml
